<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="122dp"
        android:layout_height="82dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="68dp"
        android:text="@string/number4"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="122dp"
        android:layout_height="82dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="36dp"
        android:text="@string/number6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="122dp"
        android:layout_height="82dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="192dp"
        android:text="@string/number8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="111dp"
        android:text="@string/choose_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>